<?xml version="1.0"?>
<package format="2">
  <name>core_agent</name>
  <version>0.0.1</version>
  <description>The core_agent package</description>

  <maintainer email="kerry@navifra.com">Kerry Cho</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>core</build_depend>
  <build_depend>core_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>core</exec_depend>
  <exec_depend>core_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
