<?xml version="1.0"?>
<package format="2">
  <name>nc_path_planner</name>
  <version>0.0.0</version>
  <description>The nc_path_planner package</description>

  <maintainer email="founder@navifra.com">brian</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
    <depend>nav_msgs</depend>
    <depend>core_msgs</depend>

</package>
